# serializer version: 1
# name: test_load_cellpack[bcif]
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[bcif].1
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load_cellpack[bcif].2
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load_cellpack[bcif].3
  [[ 4.53e+00 -4.99e+00 -8.37e-02]
   [-8.04e+00  4.73e+00  8.69e+00]
   [ 6.16e-01  7.44e+00  7.43e-02]
   [ 7.54e+00  2.22e+00 -2.83e-01]
   [-4.57e+00  1.14e+01  2.63e-01]
   [-4.64e+00 -6.82e+00 -1.43e+00]
   [-2.20e-01 -6.88e+00  5.49e-03]
   [-1.41e+01 -1.18e+01 -1.16e+00]
   [ 2.00e+00  6.44e+00  3.07e-01]
   [ 6.24e-01 -7.03e-01  8.56e-01]
   [-5.74e+00 -8.50e+00 -9.16e-01]
   [-3.44e-01 -3.30e+00  4.67e-01]
   [-2.49e+00  4.62e+00 -3.35e+00]
   [-2.16e+00  5.10e+00  6.99e-02]
   [-3.14e+00 -6.26e+00  2.95e-01]
   [ 2.23e-01 -4.02e+00 -1.04e-01]
   [-1.12e+01 -2.99e+00 -1.49e+00]
   [-1.83e+00 -3.78e+00 -9.78e-01]
   [ 4.90e-01 -1.82e+00 -1.12e-01]
   [ 1.10e+01  1.05e+01  7.79e-01]
   [-1.66e+00 -2.69e+00 -9.52e-01]
   [ 9.11e-01  1.89e+00  8.25e-01]
   [ 6.17e+00  7.74e+00 -5.87e-01]
   [ 8.51e-01  5.47e-01 -3.17e-01]
   [-6.15e+00  4.92e+00  9.97e-01]
   [-9.79e+00 -1.14e+01  4.67e-01]
   [ 6.10e+00 -2.83e+00 -1.71e-01]
   [-1.41e+01 -1.18e+01 -1.15e+00]
   [ 2.01e+00  6.29e+00  4.86e-01]
   [-9.85e+00 -8.41e+00  6.32e-01]
   [ 6.22e+00  7.26e+00 -1.77e+00]
   [-1.40e+01 -3.86e+00 -2.02e+00]
   [-4.05e+00  5.00e+00  2.89e-01]
   [-1.68e+00 -2.70e+00 -9.02e-01]
   [ 7.80e+00  4.03e+00  1.11e-01]
   [ 2.79e+00  2.29e+00 -4.60e-01]
   [-2.72e+00 -7.59e+00 -6.14e-01]
   [ 5.60e+00 -7.73e-01 -9.05e-01]
   [-6.16e+00  4.91e+00  9.93e-01]
   [-1.65e+00 -2.70e+00 -9.20e-01]
   [ 2.00e-01 -4.04e+00 -1.25e-01]
   [-8.07e+00  1.34e+01  9.09e-01]
   [-5.72e+00  3.41e+00  1.51e+00]
   [-4.19e+00  9.79e+00  6.22e-01]
   [-3.49e-01  7.55e+00  7.99e-02]
   [-1.10e+00  8.26e+00  7.88e-02]
   [-4.22e+00 -5.31e+00  1.01e+00]
   [-4.10e-02 -6.10e+00 -6.24e-01]
   [-7.84e+00  1.23e+01  3.72e+00]
   [ 5.04e+00  2.83e+00  1.65e+00]
   [ 5.99e-01  7.45e+00  3.03e-02]
   [-5.66e+00 -8.69e+00 -9.15e-01]
   [ 7.44e+00 -1.79e+00  1.27e-02]
   [ 7.62e+00  4.17e+00  3.03e-01]
   [-1.07e+01 -8.49e+00  2.04e+00]
   [-6.12e+00  4.90e+00  9.67e-01]
   [ 2.64e+00 -6.23e+00 -4.01e-01]
   [-5.32e+00 -6.03e+00  7.45e-02]
   [ 9.12e+00 -1.15e+01 -1.71e+00]
   [ 7.80e+00  4.02e+00  7.71e-02]
   [ 2.46e-01  2.33e+00  2.82e-03]
   [-5.50e+00  4.39e+00  2.41e+00]
   [-1.35e+00 -5.44e+00  8.98e-01]
   [ 1.03e+01 -3.93e+00 -4.97e-01]
   [-1.51e+00 -3.07e+00  2.05e-01]
   [-4.22e+00 -5.30e+00  1.03e+00]
   [ 2.94e+00 -3.37e+00 -1.93e-01]
   [ 6.20e+00  7.25e+00 -1.81e+00]
   [ 2.01e+00 -3.09e+00 -1.37e+00]
   [ 4.69e+00  5.87e+00 -7.17e-01]
   [-7.42e+00 -2.49e-02 -8.84e-02]
   [-5.11e+00  2.76e+00 -7.01e+00]
   [ 7.55e+00 -8.21e-01  1.07e-02]
   [ 2.05e+00  6.35e+00  5.16e-01]
   [ 4.24e+00  2.60e+00  3.75e+00]
   [ 5.28e+00  1.91e+00  2.81e+00]
   [-8.51e+00 -8.32e+00  2.72e+00]
   [ 2.32e-01 -4.02e+00 -1.53e-01]
   [ 8.10e+00  1.47e+00 -8.54e-01]
   [-1.06e-01 -1.90e+00  9.67e-01]
   [-4.00e+00  9.54e+00 -3.46e-01]
   [ 3.75e-02 -5.80e+00 -8.74e-02]
   [-4.77e+00 -5.14e+00  4.50e-01]
   [ 3.65e+00  5.87e-01 -3.90e-01]
   [-6.11e+00  4.90e+00  9.79e-01]
   [ 8.13e+00  3.22e+00 -1.31e+00]
   [ 3.01e+00  1.86e+00  1.57e+00]
   [-2.98e-01 -6.16e+00 -9.74e-01]
   [ 9.85e+00 -4.92e+00 -3.91e-01]
   [ 1.06e+01 -3.81e+00 -2.81e+00]
   [-3.68e+00 -7.33e+00 -1.74e-01]
   [-5.94e+00 -1.47e+01 -4.03e-02]
   [ 6.61e+00  4.40e+00  4.03e-01]
   [-5.97e+00  3.34e+00  9.80e-01]
   [ 1.08e+01  1.02e+01 -2.77e-02]
   [-4.72e+00 -5.11e+00  4.15e-01]
   [-8.28e+00  3.41e+00  6.14e+00]
   [-5.79e+00 -8.57e+00 -8.85e-01]
   [-6.47e+00 -9.02e+00 -1.15e-01]
   [-4.84e+00 -6.76e+00 -1.29e+00]]
# ---
# name: test_load_cellpack[bcif].4
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_load_cellpack[bcif].5
  [[ 1.65e-01  6.70e-01 -6.45e-02 -7.21e-01]
   [ 1.47e-02 -9.86e-01  1.51e-01 -6.36e-02]
   [ 5.88e-01 -2.29e-01 -6.64e-01  4.01e-01]
   [ 2.64e-01  7.67e-01  3.66e-01 -4.56e-01]
   [ 4.37e-01  7.51e-01 -4.76e-01  1.35e-01]
   [ 3.43e-01  5.84e-01  6.98e-01  2.34e-01]
   [ 1.58e-01  6.89e-01 -1.58e-01 -6.89e-01]
   [ 3.94e-01  4.58e-01 -4.10e-01  6.84e-01]
   [ 1.31e-01 -4.51e-01 -8.79e-01 -8.04e-02]
   [ 3.03e-01 -1.61e-02 -5.58e-01  7.72e-01]
   [ 3.05e-01  5.10e-01 -2.01e-01  7.79e-01]
   [ 2.45e-01  8.63e-02  8.68e-01 -4.23e-01]
   [ 6.37e-02  5.13e-01  3.63e-02  8.55e-01]
   [ 9.13e-01 -2.04e-01  2.11e-01  2.82e-01]
   [ 1.06e-01  8.80e-01 -4.09e-02 -4.61e-01]
   [ 3.17e-01 -1.81e-01  7.53e-01 -5.47e-01]
   [ 6.29e-02  4.64e-01  2.54e-01  8.46e-01]
   [ 3.20e-01 -6.14e-01 -4.63e-01 -5.53e-01]
   [ 1.37e-01  2.40e-01 -7.51e-01 -6.00e-01]
   [ 2.64e-01  6.17e-01  5.09e-01 -5.39e-01]
   [ 1.84e-01  6.43e-02 -5.60e-01 -8.05e-01]
   [ 3.28e-01 -6.16e-01 -4.40e-01 -5.66e-01]
   [ 4.96e-02 -2.90e-01 -6.86e-01  6.66e-01]
   [ 2.92e-01  2.05e-01 -5.62e-01  7.46e-01]
   [ 1.92e-01 -9.32e-01 -2.51e-01 -1.80e-01]
   [ 3.13e-01  7.62e-01 -5.67e-01 -4.16e-05]
   [ 6.67e-02  2.17e-01  3.80e-01  8.97e-01]
   [ 3.94e-01  4.58e-01 -4.10e-01  6.84e-01]
   [ 3.42e-02 -3.27e-01 -8.94e-01 -3.05e-01]
   [ 5.88e-01 -7.32e-01 -2.89e-01 -1.86e-01]
   [ 5.44e-01 -1.60e-01 -6.51e-01 -5.04e-01]
   [ 4.39e-02 -1.49e-01 -7.91e-01  5.92e-01]
   [ 7.56e-01  3.76e-01  1.45e-01  5.16e-01]
   [ 1.84e-01  6.43e-02 -5.60e-01 -8.05e-01]
   [ 4.42e-01  3.40e-01 -3.25e-01 -7.64e-01]
   [ 4.70e-01 -3.46e-03 -6.57e-01  5.90e-01]
   [ 4.61e-01  9.04e-02  3.81e-01 -7.96e-01]
   [ 5.20e-02  2.65e-01 -6.59e-01  7.02e-01]
   [ 1.92e-01 -9.32e-01 -2.51e-01 -1.80e-01]
   [ 1.84e-01  6.43e-02 -5.60e-01 -8.05e-01]
   [ 3.17e-01 -1.81e-01  7.53e-01 -5.47e-01]
   [ 8.43e-01  1.39e-01 -4.97e-01 -1.51e-01]
   [ 4.18e-01  6.53e-01 -5.25e-01 -3.51e-01]
   [ 5.21e-01 -6.94e-01 -1.19e-01 -4.82e-01]
   [ 6.37e-01  3.06e-01 -6.37e-01 -3.06e-01]
   [ 3.32e-01 -3.96e-01  1.16e-01  8.48e-01]
   [ 7.59e-01  4.93e-03 -6.40e-01 -1.19e-01]
   [ 2.46e-01  9.61e-01 -3.82e-02 -1.18e-01]
   [ 5.14e-01  1.33e-01 -6.32e-01 -5.64e-01]
   [ 5.34e-01  2.41e-01  8.11e-01 -1.71e-05]
   [ 5.88e-01 -2.29e-01 -6.64e-01  4.01e-01]
   [ 4.41e-01 -8.32e-02  4.67e-01 -7.62e-01]
   [ 1.50e-01 -4.72e-01 -5.70e-01 -6.56e-01]
   [ 6.06e-02 -5.64e-01  1.07e-01  8.17e-01]
   [ 2.10e-01 -3.94e-01 -6.51e-01 -6.14e-01]
   [ 1.92e-01 -9.32e-01 -2.51e-01 -1.80e-01]
   [ 5.34e-02 -4.07e-01  5.60e-01  7.20e-01]
   [ 5.86e-01 -4.27e-02 -8.09e-01 -8.01e-07]
   [ 2.57e-02  4.54e-01  8.45e-01 -2.81e-01]
   [ 4.42e-01  3.40e-01 -3.25e-01 -7.64e-01]
   [ 3.05e-01  4.19e-01  8.07e-01 -2.83e-01]
   [ 7.42e-01  2.76e-01 -5.93e-01 -1.48e-01]
   [ 2.68e-01  6.71e-01 -9.28e-02  6.85e-01]
   [ 3.47e-01 -4.36e-01  7.66e-01 -3.21e-01]
   [ 5.33e-01 -2.00e-01 -4.78e-01  6.69e-01]
   [ 7.59e-01  4.93e-03 -6.40e-01 -1.19e-01]
   [ 1.84e-01 -5.64e-01 -7.71e-01  2.30e-01]
   [ 5.44e-01 -1.60e-01 -6.51e-01 -5.04e-01]
   [ 1.16e-01  8.41e-01  1.57e-01 -5.05e-01]
   [ 2.04e-01 -1.55e-01  5.74e-01  7.78e-01]
   [ 6.76e-01  6.76e-01 -2.09e-01  2.09e-01]
   [ 3.57e-01  1.72e-01 -1.23e-01  9.10e-01]
   [ 1.68e-01  3.90e-01 -5.29e-01 -7.35e-01]
   [ 3.42e-02 -3.27e-01 -8.94e-01 -3.05e-01]
   [ 2.77e-01 -4.76e-01 -8.24e-01 -1.33e-01]
   [ 8.42e-01 -3.51e-01  6.17e-02 -4.05e-01]
   [ 2.99e-01 -2.92e-02 -7.19e-01  6.27e-01]
   [ 3.17e-01 -1.81e-01  7.53e-01 -5.47e-01]
   [ 2.89e-02 -4.88e-01  7.81e-01  3.88e-01]
   [ 2.24e-01 -1.03e-01 -7.83e-01  5.71e-01]
   [ 6.14e-01  6.61e-01 -9.92e-02  4.19e-01]
   [ 9.78e-02  8.13e-01  5.61e-01  1.23e-01]
   [ 9.41e-02 -9.80e-01  1.54e-01  8.21e-02]
   [ 7.86e-01 -4.34e-01  4.40e-01  9.19e-07]
   [ 1.92e-01 -9.32e-01 -2.51e-01 -1.80e-01]
   [ 6.42e-01 -4.10e-01 -2.57e-01 -5.95e-01]
   [ 6.51e-01  3.42e-01  5.11e-01  4.44e-01]
   [ 3.46e-01  5.91e-01 -7.29e-01 -7.01e-06]
   [ 8.20e-01  1.28e-02 -1.25e-01  5.59e-01]
   [ 9.13e-01  1.10e-03 -4.09e-01  9.28e-09]
   [ 2.00e-01  6.81e-01 -2.52e-02  7.04e-01]
   [ 9.66e-01 -2.51e-01 -6.89e-02  5.95e-06]
   [ 4.87e-01 -6.68e-01 -4.54e-01  3.32e-01]
   [ 2.55e-01 -7.03e-01  1.90e-01  6.36e-01]
   [ 3.48e-01  6.39e-01  4.07e-01 -5.52e-01]
   [ 4.26e-02  3.48e-01 -9.27e-01 -1.29e-01]
   [ 1.95e-01 -8.21e-02 -9.68e-01  1.33e-01]
   [ 3.05e-01  5.10e-01 -2.01e-01  7.79e-01]
   [ 7.36e-01 -5.47e-01 -1.85e-01 -3.53e-01]
   [ 9.22e-02 -8.40e-01  3.51e-01 -4.03e-01]]
# ---
# name: test_load_cellpack[bcif].6
  []
# ---
# name: test_load_cellpack[bcif].7
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[cif]
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[cif].1
  [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load_cellpack[cif].2
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load_cellpack[cif].3
  [11417  1850  9794  5480   866   116  2877 14594 11699  9354  7506  6557
     578  5655  9799  4331 18091  8413 10742 10818 15544  2036  4275 11251
   10994 16828 18060  5549 14594 12834 15576  1913  8538  6868  2036  7167
    8340  5391  9082 16828  2036  4283 16828 13342  6203  2068   997 11735
    4344 14064  7117  9799  4275 10402 11492 13525 16332 10174   715 13321
    7167  5317 12431  8753  6260  7034 11735  2499  1913 10120 15209 10579
    4331  2443 12550  5562  6461 17281  4283  7662  9721  4888  2802 12154
    4497 16332 10529   498  4100  3175   506 13705  6801 11038 14988 13011
   12977  6303  7506  7610]
# ---
# name: test_load_cellpack[cif].4
  [[-2.21e+00  7.83e+00  8.02e-01]
   [-5.66e+00 -1.32e+01 -1.59e+00]
   [ 2.59e+00 -7.34e+00 -3.47e-01]
   [ 5.38e+00  2.98e+00  4.21e+00]
   [ 4.70e+00  3.92e+00  3.29e-01]
   [-3.26e+00  5.81e+00 -3.92e+00]
   [-7.65e+00 -8.71e-01 -3.02e-01]
   [ 1.01e+01  9.54e+00  1.19e+00]
   [-5.47e+00  4.73e+00  9.73e-01]
   [-9.71e+00 -3.76e+00 -1.49e+00]
   [ 4.12e+00  2.23e+00  1.45e+00]
   [-1.43e+01 -4.61e+00 -2.11e+00]
   [-1.94e-01 -2.07e+00  8.62e-01]
   [ 5.87e+00  2.62e+00  1.58e+00]
   [ 2.73e+00 -6.72e+00 -3.85e-01]
   [ 3.49e+00  5.26e+00 -5.76e-01]
   [ 1.17e+01 -9.60e+00  2.11e-02]
   [-3.57e+00  1.10e+01  2.92e-01]
   [-4.24e+00 -5.21e+00 -9.95e-03]
   [-6.35e+00 -2.80e+00 -1.98e+00]
   [ 1.24e+01 -1.06e+01  4.20e+00]
   [-3.60e+00 -6.63e+00 -1.90e+00]
   [ 6.12e+00  7.28e+00 -6.85e-01]
   [ 7.84e+00 -1.01e+00 -2.97e-02]
   [-1.48e+00 -2.50e-01  1.05e-01]
   [ 9.08e+00 -1.16e+01 -1.81e+00]
   [-9.25e+00 -1.06e+01  3.17e-01]
   [ 4.98e+00  8.43e-01  8.84e+00]
   [ 1.01e+01  9.55e+00  1.18e+00]
   [-8.29e+00  1.11e+01  4.12e+00]
   [ 1.20e+01 -9.51e+00  3.66e+00]
   [-5.66e+00 -1.31e+01  4.42e-01]
   [-4.59e+00  1.12e+01  4.67e-02]
   [-9.02e+00  3.69e+00  6.92e+00]
   [-3.64e+00 -6.59e+00 -1.88e+00]
   [-1.70e+00 -3.36e+00 -1.04e+00]
   [-2.45e+00  7.00e+00  8.02e-01]
   [ 5.86e+00  4.04e+00  1.40e+00]
   [ 6.77e+00  3.58e-01 -3.34e-02]
   [ 9.07e+00 -1.16e+01 -1.80e+00]
   [-3.62e+00 -6.61e+00 -1.89e+00]
   [ 5.77e+00  6.84e+00 -9.01e-01]
   [ 9.07e+00 -1.16e+01 -1.76e+00]
   [-1.08e+01 -1.01e+01 -5.12e-02]
   [-6.14e+00 -1.12e+01  1.36e-01]
   [-2.94e+00 -5.39e+00 -4.33e-01]
   [ 4.67e+00  3.00e+00  5.54e+00]
   [ 1.60e+00  5.63e+00 -3.49e-01]
   [ 3.48e+00  6.56e+00 -1.60e-01]
   [ 2.54e+00  4.59e+00 -9.04e-01]
   [-5.28e+00 -3.22e+00  1.36e-01]
   [ 2.69e+00 -6.70e+00 -4.19e-01]
   [ 6.11e+00  7.32e+00 -7.35e-01]
   [-1.82e+00  4.86e+00 -2.53e+00]
   [-4.38e+00  1.06e+01 -2.90e-01]
   [-7.78e+00 -8.32e+00  2.21e+00]
   [ 9.56e+00  9.31e+00  1.83e+00]
   [ 4.85e+00  1.04e+01 -2.09e+00]
   [ 6.25e-01 -2.19e+00  7.03e-02]
   [-1.15e+01 -1.02e+01  6.83e-01]
   [-1.72e+00 -3.36e+00 -9.91e-01]
   [ 1.59e+00  4.30e+00  1.89e-01]
   [ 1.02e+01  9.03e+00  1.89e+00]
   [-6.75e+00  4.25e+00 -6.09e+00]
   [-5.93e+00 -1.39e+01  4.79e-01]
   [-7.53e+00  9.97e-01 -2.05e-01]
   [ 1.63e+00  5.62e+00 -3.42e-01]
   [-8.70e+00  2.61e+00  5.93e-01]
   [-5.69e+00 -1.31e+01  4.92e-01]
   [ 7.40e+00  4.07e+00  4.19e-01]
   [-1.36e+01 -1.20e+01 -5.62e-01]
   [ 6.81e+00  1.25e+00 -4.53e-01]
   [ 3.45e+00  5.25e+00 -6.07e-01]
   [-5.96e+00 -2.10e+00  3.19e-02]
   [ 1.09e+01  9.93e+00 -5.31e-02]
   [ 4.96e+00  2.02e+00  8.40e+00]
   [-8.38e+00 -3.19e+00 -1.42e+00]
   [-1.35e+01 -1.12e+01 -9.86e-01]
   [ 5.73e+00  6.91e+00 -9.45e-01]
   [ 4.18e+00 -3.62e+00 -8.40e-01]
   [-1.35e+00 -2.93e+00  6.80e-02]
   [-5.19e+00  3.05e+00 -5.79e+00]
   [-9.11e+00  1.25e+00  1.10e+00]
   [-6.86e+00 -9.23e+00  9.81e-01]
   [-4.53e+00  9.15e+00  4.30e-01]
   [ 9.56e+00  9.34e+00  1.82e+00]
   [ 5.25e+00  3.07e+00  4.48e+00]
   [ 8.87e-02  2.68e+00  4.72e-01]
   [ 7.23e+00  4.24e+00  3.76e-01]
   [ 2.89e-02 -5.91e+00 -5.49e-01]
   [ 2.18e-01  2.28e+00 -7.30e-03]
   [ 9.11e+00 -1.15e+01 -1.68e+00]
   [-9.33e+00  2.29e+00  1.27e+00]
   [-2.32e+00 -6.82e+00 -1.24e+00]
   [-1.03e+01  1.10e+01  6.55e-01]
   [-8.55e+00  1.23e+01 -8.04e-01]
   [-8.88e+00  1.20e+01 -9.85e-02]
   [-6.37e+00 -8.90e+00 -1.07e-01]
   [ 4.08e+00  2.20e+00  1.40e+00]
   [ 2.42e+00 -4.15e+00  1.14e+00]]
# ---
# name: test_load_cellpack[cif].5
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_load_cellpack[cif].6
  [[ 6.78e-01  4.61e-02 -5.69e-01  4.63e-01]
   [ 4.54e-02  1.74e-01 -7.71e-01  6.11e-01]
   [ 2.34e-01  3.87e-01  6.63e-01  5.96e-01]
   [ 9.05e-01 -3.09e-01 -8.93e-02  2.79e-01]
   [ 9.90e-01  5.05e-04 -1.39e-01  0.00e+00]
   [ 2.03e-01 -7.54e-01 -5.69e-01  2.55e-01]
   [ 1.69e-01  9.54e-01  2.35e-01 -8.10e-02]
   [ 8.24e-01 -2.79e-01  2.85e-02  4.93e-01]
   [ 4.30e-01  5.21e-01  5.13e-01 -5.29e-01]
   [ 6.04e-02 -5.31e-01 -2.35e-01  8.12e-01]
   [ 3.32e-01  3.09e-01  7.88e-01  4.17e-01]
   [ 4.01e-01  4.87e-01  3.48e-01 -6.94e-01]
   [ 6.00e-01  7.41e-01 -3.02e-01 -1.30e-05]
   [ 6.24e-02  5.42e-01 -2.60e-02  8.37e-01]
   [ 5.54e-01 -6.26e-01  3.97e-01  3.78e-01]
   [ 4.48e-01 -6.30e-01  2.92e-01  5.63e-01]
   [ 5.78e-01  7.06e-01 -4.10e-01  5.09e-05]
   [ 1.05e-01 -3.38e-01 -8.15e-01 -4.59e-01]
   [ 5.33e-02 -5.87e-01  3.71e-01  7.18e-01]
   [ 4.28e-01 -4.86e-01 -1.83e-01 -7.40e-01]
   [ 4.98e-01  3.20e-02  3.46e-02 -8.66e-01]
   [ 1.65e-01 -6.35e-01 -2.17e-01 -7.23e-01]
   [ 3.08e-01  6.67e-01  4.22e-01 -5.32e-01]
   [ 5.27e-01 -3.83e-01 -5.82e-01 -4.88e-01]
   [ 3.77e-01 -6.04e-01  6.92e-01  1.17e-01]
   [ 1.63e-01 -3.85e-01 -8.14e-01  4.03e-01]
   [ 7.08e-01 -5.30e-01  4.67e-01 -7.23e-05]
   [ 5.70e-01 -3.81e-01 -5.02e-01 -5.27e-01]
   [ 8.24e-01 -2.79e-01  2.85e-02  4.93e-01]
   [ 1.46e-01  4.29e-01  6.29e-01 -6.31e-01]
   [ 6.12e-01  8.54e-02 -2.96e-01 -7.29e-01]
   [ 5.41e-01 -8.00e-01 -1.03e-02 -2.60e-01]
   [ 4.40e-01  7.99e-01  3.51e-01 -2.11e-01]
   [ 8.49e-01  3.79e-01 -2.59e-01  2.62e-01]
   [ 1.65e-01 -6.35e-01 -2.17e-01 -7.23e-01]
   [ 5.30e-01 -5.76e-01 -3.83e-01 -4.90e-01]
   [ 4.15e-02  2.09e-01 -8.02e-01  5.58e-01]
   [ 3.16e-01  4.96e-01  5.01e-02  8.07e-01]
   [ 6.31e-01  6.47e-01  3.03e-01 -3.03e-01]
   [ 1.63e-01 -3.85e-01 -8.14e-01  4.03e-01]
   [ 1.65e-01 -6.35e-01 -2.17e-01 -7.23e-01]
   [ 1.78e-01 -2.29e-01 -8.42e-01  4.55e-01]
   [ 1.63e-01 -3.85e-01 -8.14e-01  4.03e-01]
   [ 1.11e-01  3.87e-02  5.77e-01  8.08e-01]
   [ 3.71e-01  1.87e-01 -7.81e-01  4.66e-01]
   [ 4.76e-01  1.92e-01 -2.44e-01 -8.23e-01]
   [ 2.11e-01  1.62e-01  2.78e-01 -9.23e-01]
   [ 7.25e-01 -2.47e-01 -6.37e-01  9.14e-02]
   [ 3.22e-01 -1.77e-01  4.32e-01  8.23e-01]
   [ 3.05e-01  7.69e-01  5.62e-01  9.76e-03]
   [ 4.16e-01 -2.18e-01  8.60e-01 -2.00e-01]
   [ 5.54e-01 -6.26e-01  3.97e-01  3.78e-01]
   [ 3.08e-01  6.67e-01  4.22e-01 -5.32e-01]
   [ 7.27e-02  1.16e-01  1.61e-01  9.77e-01]
   [ 5.13e-01  5.90e-01  5.74e-01 -2.46e-01]
   [ 5.55e-01  3.72e-01  5.39e-01 -5.13e-01]
   [ 5.18e-01 -3.32e-01  3.21e-01 -7.20e-01]
   [ 3.12e-01 -2.44e-01  7.44e-01 -5.38e-01]
   [ 1.85e-01 -4.09e-01  7.58e-01  4.73e-01]
   [ 5.14e-01  6.80e-02  6.13e-01  5.96e-01]
   [ 5.30e-01 -5.76e-01 -3.83e-01 -4.90e-01]
   [ 4.39e-01 -1.26e-01  6.99e-01  5.51e-01]
   [ 6.06e-01  2.93e-02  2.31e-01  7.61e-01]
   [ 3.33e-01 -7.78e-01  5.23e-01  1.03e-01]
   [ 5.69e-02  6.57e-02  6.38e-01  7.65e-01]
   [ 9.02e-01  4.32e-01 -1.11e-03 -3.77e-08]
   [ 7.25e-01 -2.47e-01 -6.37e-01  9.14e-02]
   [ 4.23e-01  5.30e-01 -6.67e-02 -7.32e-01]
   [ 5.41e-01 -8.00e-01 -1.03e-02 -2.60e-01]
   [ 8.07e-01 -1.59e-01 -5.69e-01 -1.11e-07]
   [ 5.14e-01 -8.26e-01 -2.17e-01  8.44e-02]
   [ 8.16e-01  5.12e-01 -2.68e-01 -2.27e-06]
   [ 4.48e-01 -6.30e-01  2.92e-01  5.63e-01]
   [ 7.55e-01 -4.02e-01 -5.27e-02  5.15e-01]
   [ 5.83e-01  6.55e-01 -1.78e-01  4.46e-01]
   [ 1.50e-01 -8.43e-02  9.07e-01  3.84e-01]
   [ 3.51e-01 -4.79e-01 -6.73e-01  4.41e-01]
   [ 2.13e-02 -3.93e-01  9.04e-01 -1.68e-01]
   [ 1.78e-01 -2.29e-01 -8.42e-01  4.55e-01]
   [ 6.44e-01  6.15e-02  6.23e-01  4.40e-01]
   [ 1.96e-01  4.70e-01  9.88e-02 -8.55e-01]
   [ 9.54e-01 -2.67e-01 -1.39e-01  9.51e-06]
   [ 3.30e-01  3.26e-01 -8.71e-01 -1.59e-01]
   [ 2.06e-01  2.89e-01  6.63e-01  6.60e-01]
   [ 4.05e-01 -4.97e-01 -3.14e-01 -7.00e-01]
   [ 5.18e-01 -3.32e-01  3.21e-01 -7.20e-01]
   [ 9.59e-01 -1.53e-01 -2.37e-01  8.10e-06]
   [ 3.85e-01  8.01e-01 -4.43e-01  1.19e-01]
   [ 5.42e-02 -6.65e-01  1.39e-01  7.32e-01]
   [ 2.60e-02 -1.54e-01 -9.24e-01  3.49e-01]
   [ 3.76e-01  6.46e-01  6.39e-01 -1.81e-01]
   [ 1.98e-01  2.38e-01 -9.42e-01  1.28e-01]
   [ 7.08e-02 -2.01e-01 -2.25e-01  9.51e-01]
   [ 6.41e-01  4.83e-01 -6.19e-02 -5.94e-01]
   [ 3.90e-01  5.66e-01 -8.90e-02  7.21e-01]
   [ 6.77e-01  2.31e-01  1.73e-01  6.77e-01]
   [ 2.12e-01 -7.29e-01 -6.51e-01 -2.74e-02]
   [ 5.08e-01 -3.05e-01  4.93e-01  6.37e-01]
   [ 3.32e-01  3.09e-01  7.88e-01  4.17e-01]
   [ 5.28e-02  1.56e-01 -6.85e-01  7.10e-01]]
# ---
# name: test_load_cellpack[cif].7
  []
# ---
# name: test_load_cellpack[cif].8
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
